Bug 393586 - Reference Images Tool Save/Load set buttons produce no action.
Summary: Reference Images Tool Save/Load set buttons produce no action.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-27 17:27 UTC by Quiralta
Modified: 2018-05-14 14:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quiralta 2018-04-27 17:27:37 UTC
It seems like these functions are broken, no dialog will open to neither of the both buttons.

To reproduce:
-Select Ref-images-tool
-try to use either of the Load set/Save set buttons

Result: no action is triggered.

Expected result: To open dialog to save/open the sets of images.
Comment 1 joupent 2018-05-14 14:20:13 UTC
Git commit 5bee9154f1df3ca5338cb439b2d99608348a881e by Jouni Pentikäinen.
Committed on 14/05/2018 at 14:13.
Pushed by jounip into branch 'master'.

Add saving and loading sets of reference images

M  +5    -0    libs/koplugin/KisMimeDatabase.cpp
M  +13   -0    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +1    -0    libs/ui/flake/KisReferenceImagesLayer.h
M  +1    -0    plugins/tools/defaulttool/CMakeLists.txt
A  +96   -0    plugins/tools/defaulttool/referenceimagestool/KisReferenceImageCollection.cpp     [License: GPL (v2+)]
A  +42   -0    plugins/tools/defaulttool/referenceimagestool/KisReferenceImageCollection.h     [License: GPL (v2+)]
M  +65   -0    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://commits.kde.org/krita/5bee9154f1df3ca5338cb439b2d99608348a881e