Add saving and loading sets of reference images

BUG: 393586